--- a/tests/src/Kernel/fixtures/markup_rendering_patterns/carousel.yml
+++ b/tests/src/Kernel/fixtures/markup_rendering_patterns/carousel.yml
@@ -8,7 +8,8 @@ carousel_with_all_settings:
         show_controls: true
         show_indicators: true
         autoplay: true
-        autoinit: true
+        # Deprecated autoinit value will be ignored since autplay is set.
+        autoinit: false
         disable_touch: true
       slides:
         - caption: 'First slide caption'
@@ -26,7 +27,6 @@ carousel_with_all_settings:
           show_controls: true
           show_indicators: true
           autoplay: true
-          autoinit: true
           disable_touch: true
         items:
           - image:
@@ -44,7 +44,6 @@ carousel_with_all_settings_false:
         show_controls: false
         show_indicators: false
         autoplay: false
-        autoinit: false
         disable_touch: false
       slides:
         - caption: 'First slide caption'
@@ -62,7 +61,6 @@ carousel_with_all_settings_false:
           show_controls: false
           show_indicators: false
           autoplay: false
-          autoinit: false
           disable_touch: false
         items:
           - image:
@@ -80,7 +78,6 @@ carousel_with_settings_combination:
         show_controls: true
         show_indicators: false
         autoplay: true
-        autoinit: false
         disable_touch: true
       slides:
         - caption: 'First slide caption'
@@ -98,7 +95,6 @@ carousel_with_settings_combination:
           show_controls: true
           show_indicators: false
           autoplay: true
-          autoinit: false
           disable_touch: true
         items:
           - image:
@@ -127,7 +123,6 @@ carousel_without_settings_assert_defaults:
           show_controls: true
           show_indicators: false
           autoplay: true
-          autoinit: true
           disable_touch: false
         items:
           - image:
@@ -156,7 +151,6 @@ carousel_just_images:
           show_controls: true
           show_indicators: false
           autoplay: true
-          autoinit: true
           disable_touch: false
         items:
           - image:
@@ -200,7 +194,6 @@ carousel_all_item_values:
           show_controls: true
           show_indicators: false
           autoplay: true
-          autoinit: true
           disable_touch: false
         items:
           - image:
@@ -242,10 +235,24 @@ carousel_title_present_no_caption_no_link:
           show_controls: true
           show_indicators: false
           autoplay: true
-          autoinit: true
           disable_touch: false
         items:
           - image:
               src: 'https://images.site.example1'
               alt: 'alt image 1'
             caption_title: 'Slide title'
+carousel_with_deprecated_autoinit_ignored:
+  render:
+    '#type': pattern
+    '#id': carousel
+    '#fields':
+      settings:
+        autoplay: false
+        autoinit: true
+  assertions:
+    pattern:
+      class: Drupal\Tests\oe_bootstrap_theme\PatternAssertion\CarouselPatternAssert
+      expected:
+        settings:
+          show_controls: true
+          autoplay: false
