OEL-1995: First round of updates for description list.

--- a/templates/patterns/description_list/description_list.ui.patterns.yml
+++ b/templates/patterns/description_list/description_list.ui.patterns.yml
@@ -8,7 +8,7 @@ description_list:
       options:
         default: Default
         horizontal: Horizontal
-      preview: Horizontal
+      preview: horizontal
   fields:
     items:
       type: 'array'
