OEL-1995: Add new default responsive breakpoint for offcanvas and update search variant.

--- a/tests/src/Kernel/fixtures/markup_rendering_patterns/offcanvas.yml
+++ b/tests/src/Kernel/fixtures/markup_rendering_patterns/offcanvas.yml
@@ -16,7 +16,7 @@ offcanvas_top_with_backdrop_and_toggle:
       'button[data-bs-toggle="offcanvas"]': 1
       'div[data-drupal-selector="offcanvas"]': 1
       'div#bcl-offcanvas': 1
-      'div.offcanvas.offcanvas-top': 1
+      'div.offcanvas-lg.offcanvas-top': 1
       'button[data-bs-target="#bcl-offcanvas"]': 1
     equals:
       '.offcanvas-title': 'Offcanvas title'
@@ -37,7 +37,7 @@ offcanvas_start_with_body_scroll:
     count:
       'div[data-drupal-selector="offcanvas"]': 1
       'div#bcl-offcanvas': 1
-      'div.offcanvas.offcanvas-start': 1
+      'div.offcanvas-lg.offcanvas-start': 1
       'button[data-bs-toggle="offcanvas"]': 0
       'button[data-bs-target="#bcl-offcanvas"]': 0
     equals:
@@ -62,7 +62,7 @@ offcanvas_with_toggle_with_icon:
       'button[data-bs-toggle="offcanvas"]': 1
       'div[data-drupal-selector="offcanvas"]': 1
       'div#bcl-offcanvas': 1
-      'div.offcanvas.offcanvas-top': 1
+      'div.offcanvas-lg.offcanvas-top': 1
       'button[data-bs-target="#bcl-offcanvas"]': 1
       'svg.bi': 1
     equals:
@@ -88,7 +88,7 @@ offcanvas_with_id_from_attributes:
   assertions:
     count:
       'div#custom-id': 1
-      'div.offcanvas.offcanvas-bottom': 1
+      'div.offcanvas-lg.offcanvas-bottom': 1
       'svg.bi': 1
       'button[data-bs-target="#custom-id"]': 1
     equals:
@@ -116,7 +116,7 @@ offcanvas_search_variant:
       'button[data-bs-toggle="offcanvas"]': 1
       'div[data-drupal-selector="offcanvas"]': 1
       'div#bcl-offcanvas': 1
-      'div.offcanvas.offcanvas-top': 1
+      'div.offcanvas-lg.offcanvas-top': 1
       'button[data-bs-target="#bcl-offcanvas"]': 1
       'svg.bi': 1
     equals:
